--- a/src/_includes/partials/breadcrumbs.njk
+++ b/src/_includes/partials/breadcrumbs.njk
@@ -1,5 +1,5 @@
 <div class="relative z-20 px-5 py-4 mt-px border-t-4 sm:px-8 border-butter">
-  <nav class="max-w-screen-xl mx-auto xs:w-11/12" aria-label="Brødsmulesti" itemprop="breadcrumb">
+  <nav class="max-w-(--breakpoint-xl) mx-auto xs:w-11/12" aria-label="Brødsmulesti" itemprop="breadcrumb">
     <ol class="flex flex-wrap items-center gap-3">
       <li class="flex items-center gap-3">
         <a class="flex gap-3 text-blue-600 underline" href="#">
