--- a/_excluded/alderspensjon/alderspensjon.njk
+++ b/_excluded/alderspensjon/alderspensjon.njk
@@ -18,14 +18,14 @@ permalink: 'produkt/alderspensjon/index.html'
 
   <main class="grid py-16 grid-cols-combi" data-theme="alderspensjon">
     <div class="col-main">
-      <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
-      <h1 class="mt-1 font-bold text-4xl/tight text-balance ">{{ title | safe }}</h1>
-      <div class="mt-8 text-lg text-pretty max-w-prose">{{ ingress | markdown | safe }}</div>
+      <div class="text-fluid-16-18 tracking-widest uppercase">{{ type | safe }}</div>
+      <h1 class="mt-1 font-semibold text-fluid-36-48/tight text-balance ">{{ title | safe }}</h1>
+      <div class="mt-8 text-fluid-20-22 text-pretty max-w-prose">{{ ingress | markdown | safe }}</div>
 
       {# Audience #}
       {% if audience %}       
       <div class="mt-6 -ml-1">
-        <span class="inline-block px-3 py-2 text-sm leading-none rounded-full bg-slate-200 ">
+        <span class="inline-block px-3 py-2 text-fluid-16-18 leading-none rounded-full bg-slate-200 ">
           For {{ audience | lower | safe }}
         </span>
       </div>
@@ -35,11 +35,11 @@ permalink: 'produkt/alderspensjon/index.html'
 
     {# Innholdsfortegnelse #}
     <div class="my-8">
-      <h2 class="pb-2 text-base font-semibold border-b border-slate-200">Innhold på siden</h2>
+      <h2 class="pb-2 text-fluid-18-20 font-semibold border-b border-slate-200">Innhold på siden</h2>
       <ul class="grid gap-4 py-3">
         {% for chapter in chapters %}
         <li class="flex items-start gap-2">
-          <a class="flex gap-1 p-1 -m-1 text-blue-500 group hover:text-blue-700 text-base/snug hover:underline" href="#{{ chapter.data.title | slugify }}">
+          <a class="flex gap-1 p-1 -m-1 text-blue-500 group hover:text-blue-700 text-fluid-18-20/snug hover:underline" href="#{{ chapter.data.title | slugify }}">
             {{ '/src/_includes/svg/icons/arrow-right-angle.svg' | svgContents('-translate-y-px') | safe }}
             {{ chapter.data.title }}
           </a>
@@ -56,10 +56,10 @@ permalink: 'produkt/alderspensjon/index.html'
       {% set chapterIndex = loop.index %}
       <section class="grid grid-flow-row-dense col-full grid-cols-combi " id="{{ chapter.data.title | slugify }}" x-data="{ tocOpen: false }">
         <div class="col-wide">
-          {{ '/src/_includes/svg/placeholder.svg' | svgContents('w-full h-auto max-w-screen-md mx-auto') | safe }}
+          {{ '/src/_includes/svg/placeholder.svg' | svgContents('w-full h-auto max-w-(--breakpoint-md) mx-auto') | safe }}
         </div>
         <div class="col-main">
-          <h2 class="mt-8 mb-3 font-bold text-3xl/tight text-balance ">{{ chapter.data.title }}</h2>
+          <h2 class="mt-8 mb-3 font-semibold text-fluid-32-36/tight text-balance ">{{ chapter.data.title }}</h2>
           <p>{{ chapter.data.ingress | safe }}</p>
         </div>
 
@@ -71,7 +71,7 @@ permalink: 'produkt/alderspensjon/index.html'
           <ul class="grid gap-4 py-4 border-t border-slate-600/20">
           {% for item in chapter.templateContent | tocData %}
             <li>
-              <a class="flex items-start gap-1 p-1 -m-1 text-blue-500 group hover:text-blue-700 text-base/snug hover:underline" href="#{{ item.id }}">
+              <a class="flex items-start gap-1 p-1 -m-1 text-blue-500 group hover:text-blue-700 text-fluid-18-20/snug hover:underline" href="#{{ item.id }}">
                 {{ '/src/_includes/svg/icons/arrow-right-angle.svg' | svgContents('-translate-y-px opacity-85') | safe }}
                 {{ item.text }}
               </a>
@@ -79,7 +79,7 @@ permalink: 'produkt/alderspensjon/index.html'
           {% endfor %}
           </ul>
           <div class="absolute right-0 grid top-1.5" x-data="{ dropdownOpen: false }">
-            <button class="flex items-center gap-1 py-1 pl-3 pr-2 text-sm text-blue-500 rounded-md bg-slate-100 hover:bg-slate-200/50 hover:text-blue-700 group" x-on:click="dropdownOpen = !dropdownOpen" type="button" x-bind:aria-expanded="dropdownOpen">
+            <button class="flex items-center gap-1 py-1 pl-3 pr-2 text-fluid-16-18 text-blue-500 rounded-md bg-slate-100 hover:bg-slate-200/50 hover:text-blue-700 group" x-on:click="dropdownOpen = !dropdownOpen" type="button" x-bind:aria-expanded="dropdownOpen">
               <span>Velg kapittel</span>
               {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-5 h-5 group-aria-expanded:rotate-180') | safe }}
             </button>
@@ -104,7 +104,7 @@ permalink: 'produkt/alderspensjon/index.html'
       </section>
     {% endfor %}
 
-    <div class="pt-2 mt-12 text-sm italic border-t border-slate-200 col-main">{{ published | safe }}</div>
+    <div class="pt-2 mt-12 text-fluid-16-18 italic border-t border-slate-200 col-main">{{ published | safe }}</div>
   </main>
 {%- endblock -%}
 
