--- a/_excluded/pleiepenger/pleiepenger-a.njk
+++ b/_excluded/pleiepenger/pleiepenger-a.njk
@@ -16,13 +16,13 @@ permalink: 'produkt/pleiepenger/a/index.html'
 
   <main class="grid py-16 grid-cols-left-1 lg:grid-cols-left-2">
     <div class="col-main lg:col-wide">
-      <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
-      <h1 class="mt-1 font-bold text-4xl/tight text-balance">{{ title | safe }}</h1>
-      <div class="mt-8 text-lg text-pretty max-w-prose">{{ ingress | markdown | safe }}</div>
+      <div class="text-fluid-16-18 tracking-widest uppercase">{{ type | safe }}</div>
+      <h1 class="mt-1 font-semibold text-fluid-36-48/tight text-balance">{{ title | safe }}</h1>
+      <div class="mt-8 text-fluid-20-22 text-pretty max-w-prose">{{ ingress | markdown | safe }}</div>
 
       {# Audience #}
       <div class="mt-6 -ml-1">
-        <span class="inline-block px-3 py-2 text-sm leading-none rounded-full bg-slate-200 ">
+        <span class="inline-block px-3 py-2 text-fluid-16-18 leading-none rounded-full bg-slate-200 ">
           {{ 'For ' if audience }}{{ audience | lower | safe }}
         </span>
       </div>
@@ -30,11 +30,11 @@ permalink: 'produkt/pleiepenger/a/index.html'
 
     {# Innholdsfortegnelse #}
     <div class="mt-8">
-      <h2 class="text-base font-semibold">Innhold på siden</h2>
+      <h2 class="text-fluid-18-20 font-semibold">Innhold på siden</h2>
       <ul class="grid mt-2">
         {% for chapter in chapters.slice(0,4) %}
         <li class="relative grid items-center bg-slate-100 px-5 group hover:bg-blue-50 {{ 'rounded-t-xl pt-4 pb-2.5' if loop.first }} {{ 'rounded-b-xl pb-4 pt-2.5' if loop.last }} {{ 'py-2.5' if not (loop.first or loop.last) }}">
-          <a class="font-semibold underline text-base/snug group-hover:decoration-2 after:absolute after:inset-0" href="#{{ chapter.data.title | slugify }}">
+          <a class="font-semibold underline text-fluid-18-20/snug group-hover:decoration-2 after:absolute after:inset-0" href="#{{ chapter.data.title | slugify }}">
             {{ chapter.data.title }}
           </a>
           <p class="text-pretty">{{ chapter.data.ingress | safe }}</p>
@@ -43,7 +43,7 @@ permalink: 'produkt/pleiepenger/a/index.html'
 
         {% for chapter in chapters.slice(-1) %}
         <li class="relative grid items-center px-5 py-3.5 mt-2.5 bg-slate-100 rounded-xl group hover:bg-blue-50">
-          <a class="font-semibold underline text-base/snug group-hover:decoration-2 after:absolute after:inset-0 " href="#{{ chapter.data.title | slugify }}">
+          <a class="font-semibold underline text-fluid-18-20/snug group-hover:decoration-2 after:absolute after:inset-0 " href="#{{ chapter.data.title | slugify }}">
             {{ chapter.data.title }}
           </a>
         </li>
@@ -61,11 +61,11 @@ permalink: 'produkt/pleiepenger/a/index.html'
         x-data="{ tocShown: false, tocOpen: false }"
       >
         <div class="grid grid-cols-left-1 lg:grid-cols-left-2 col-full">
-          {# <div class="rounded-lg aspect-[2/1] border border-slate-300 mb-sm"></div> #}
+          {# <div class="rounded-lg aspect-2/1 border border-slate-300 mb-sm"></div> #}
           <div class="text-[360px]/[0.8] -translate-x-2 font-black text-slate-200 pt-2xl">{{ loop.index }}</div>
 
-          {# <div class="text-sm tracking-widest uppercase">Kapittel {{ loop.index }}</div> #}
-          <h2 class="font-bold text-3xl/snug text-balance">{{ chapter.data.title }}</h2>
+          {# <div class="text-fluid-16-18 tracking-widest uppercase">Kapittel {{ loop.index }}</div> #}
+          <h2 class="font-semibold text-fluid-32-36/snug text-balance">{{ chapter.data.title }}</h2>
 
           {# Static Chapter TOC #}
           {% if chapter.templateContent %}
@@ -111,7 +111,7 @@ permalink: 'produkt/pleiepenger/a/index.html'
       </section>
     {% endfor %}
 
-    <div class="pt-2 mt-12 text-sm italic border-t border-slate-200 col-wide">{{ published | safe }}</div>
+    <div class="pt-2 mt-12 text-fluid-16-18 italic border-t border-slate-200 col-wide">{{ published | safe }}</div>
   </main>
 {%- endblock -%}
 
