--- a/_excluded/pleiepenger/pleiepenger-c.njk
+++ b/_excluded/pleiepenger/pleiepenger-c.njk
@@ -17,13 +17,13 @@ permalink: 'produkt/pleiepenger/c/index.html'
 
   <main class="grid py-16 grid-cols-left-1 lg:grid-cols-left-2">
     <div class="col-main lg:col-wide">
-      <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
-      <h1 class="mt-1 font-bold text-4xl/tight text-balance">{{ title | safe }}</h1>
-      <div class="mt-8 text-lg text-pretty max-w-prose">{{ ingress | markdown | safe }}</div>
+      <div class="text-fluid-16-18 tracking-widest uppercase">{{ type | safe }}</div>
+      <h1 class="mt-1 font-semibold text-fluid-36-48/tight text-balance">{{ title | safe }}</h1>
+      <div class="mt-8 text-fluid-20-22 text-pretty max-w-prose">{{ ingress | markdown | safe }}</div>
 
       {# Audience #}
       <div class="mt-6 -ml-1">
-        <span class="inline-block px-3 py-2 text-sm leading-none rounded-full bg-slate-200 ">
+        <span class="inline-block px-3 py-2 text-fluid-16-18 leading-none rounded-full bg-slate-200 ">
           {{ 'For ' if audience }}{{ audience | lower | safe }}
         </span>
       </div>
@@ -31,20 +31,20 @@ permalink: 'produkt/pleiepenger/c/index.html'
 
     {# Innholdsfortegnelse #}
     <div class="mt-8 leading-normal lg:col-wide">
-      <h2 class="text-base font-semibold">Innhold på siden</h2>
+      <h2 class="text-fluid-18-20 font-semibold">Innhold på siden</h2>
       <ul class="grid gap-2 mt-2 sm:grid-cols-2 lg:grid-cols-4 sm:-mx-6 lg:mx-0">
         {% for chapter in chapters.slice(0,4) %}
-        <li class="relative grid items-start content-start gap-1 px-6 py-5 rounded-lg lg:aspect-[4/5] bg-slate-100 group hover:bg-blue-50">
-          <a class="font-semibold underline text-base/snug group-hover:decoration-2 after:absolute after:inset-0" href="#{{ chapter.data.title | slugify }}">
+        <li class="relative grid items-start content-start gap-1 px-6 py-5 rounded-lg lg:aspect-4/5 bg-slate-100 group hover:bg-blue-50">
+          <a class="font-semibold underline text-fluid-18-20/snug group-hover:decoration-2 after:absolute after:inset-0" href="#{{ chapter.data.title | slugify }}">
             {{ chapter.data.title }}
           </a>
-          <p class="text-base text-pretty">{{ chapter.data.ingress | safe }}</p>
+          <p class="text-fluid-18-20 text-pretty">{{ chapter.data.ingress | safe }}</p>
         </li>
         {% endfor %}
 
         {% for chapter in chapters.slice(-1) %}
         <li class="relative grid sm:col-span-2 lg:col-span-4 items-center px-5 mt-2 py-3.5 bg-slate-100 rounded-xl group hover:bg-blue-50">
-          <a class="font-semibold underline text-base/snug group-hover:decoration-2 after:absolute after:inset-0 " href="#{{ chapter.data.title | slugify }}">
+          <a class="font-semibold underline text-fluid-18-20/snug group-hover:decoration-2 after:absolute after:inset-0 " href="#{{ chapter.data.title | slugify }}">
             {{ chapter.data.title }}
           </a>
         </li>
@@ -59,12 +59,12 @@ permalink: 'produkt/pleiepenger/c/index.html'
       <section class="grid items-start pt-24 col-full grid-cols-left-1 lg:grid-cols-left-2" id="{{ chapter.data.title | slugify }}"  x-data="{ tocOpen: false }">
 
         <div class="lg:col-wide">
-          <div class="grid items-end px-4 bg-slate-100 aspect-[5/2] rounded-xl">
+          <div class="grid items-end px-4 bg-slate-100 aspect-5/2 rounded-xl">
             <span class="text-[360px]/[0.8] inline-block translate-y-8 font-black text-white">
               {{ loop.index }}
             </span>
           </div>
-          <h2 class="mt-4 font-bold text-3xl/snug text-balance">{{ chapter.data.title }}</h2>
+          <h2 class="mt-4 font-semibold text-fluid-32-36/snug text-balance">{{ chapter.data.title }}</h2>
         </div>
 
         {# Chapter TOC #}
@@ -89,7 +89,7 @@ permalink: 'produkt/pleiepenger/c/index.html'
       </section>
     {% endfor %}
 
-    <div class="pt-2 mt-12 text-sm italic border-t border-slate-200 col-wide">{{ published | safe }}</div>
+    <div class="pt-2 mt-12 text-fluid-16-18 italic border-t border-slate-200 col-wide">{{ published | safe }}</div>
   </main>
 {%- endblock -%}
 
