--- a/_excluded/pleiepenger/pleiepenger-d.njk
+++ b/_excluded/pleiepenger/pleiepenger-d.njk
@@ -16,37 +16,37 @@ permalink: 'produkt/pleiepenger/d/index.html'
 
   <main class="grid py-16 grid-cols-left-1 lg:grid-cols-left-2">
     <div class="col-wide">
-      <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
-      <h1 class="mt-2 font-bold text-4xl/tight text-balance">{{ title | safe }}</h1>
+      <div class="text-fluid-16-18 tracking-widest uppercase">{{ type | safe }}</div>
+      <h1 class="mt-2 font-semibold text-fluid-36-48/tight text-balance">{{ title | safe }}</h1>
 
       {# Audience #}
       <div class="mt-6 -ml-1">
-        <span class="inline-block px-3 pt-1.5 pb-1.5 text-sm leading-none rounded-full bg-slate-200 ">
+        <span class="inline-block px-3 pt-1.5 pb-1.5 text-fluid-16-18 leading-none rounded-full bg-slate-200 ">
           {{ 'For ' if audience }}{{ audience | lower | safe }}
         </span>
       </div>
 
       {# Intro #}
-      <div class="mt-8 text-lg text-pretty max-w-prose">{{ ingress | markdown | safe }}</div>
+      <div class="mt-8 text-fluid-20-22 text-pretty max-w-prose">{{ ingress | markdown | safe }}</div>
 
     </div>
 
     {# Innholdsfortegnelse #}
     <div class="leading-normal col-wide">
-      <h2 class="mt-8 text-base font-semibold">Innhold på siden</h2>
+      <h2 class="mt-8 text-fluid-18-20 font-semibold">Innhold på siden</h2>
       <ul class="grid gap-2 mt-2 sm:grid-cols-2 lg:grid-cols-4 sm:-mx-6 lg:mx-0">
         {% for chapter in chapters.slice(0,4) %}
-        <li class="relative grid items-start content-start gap-1 px-6 py-5 rounded-lg lg:aspect-[4/5] bg-slate-100 group hover:bg-blue-50">
-          <a class="font-semibold underline text-base/snug group-hover:decoration-2 after:absolute after:inset-0" href="#{{ chapter.data.title | slugify }}">
+        <li class="relative grid items-start content-start gap-1 px-6 py-5 rounded-lg lg:aspect-4/5 bg-slate-100 group hover:bg-blue-50">
+          <a class="font-semibold underline text-fluid-18-20/snug group-hover:decoration-2 after:absolute after:inset-0" href="#{{ chapter.data.title | slugify }}">
             {{ chapter.data.title }}
           </a>
-          <p class="text-base text-pretty">{{ chapter.data.ingress | safe }}</p>
+          <p class="text-fluid-18-20 text-pretty">{{ chapter.data.ingress | safe }}</p>
         </li>
         {% endfor %}
 
         {% for chapter in chapters.slice(-1) %}
         <li class="relative grid sm:col-span-2 lg:col-span-4 items-center px-5 mt-2 py-3.5 bg-slate-100 rounded-xl group hover:bg-blue-50">
-          <a class="font-semibold underline text-base/snug group-hover:decoration-2 after:absolute after:inset-0 " href="#{{ chapter.data.title | slugify }}">
+          <a class="font-semibold underline text-fluid-18-20/snug group-hover:decoration-2 after:absolute after:inset-0 " href="#{{ chapter.data.title | slugify }}">
             {{ chapter.data.title }}
           </a>
         </li>
@@ -67,13 +67,13 @@ permalink: 'produkt/pleiepenger/d/index.html'
           x-intersect:enter.margin.-10%.0px.-50%.0px="showChapter{{ chapterIndex }} = true"
           x-intersect:leave.margin.-20%.0px.0%.0px="showChapter{{ chapterIndex }} = false" 
         >
-          <div class="grid items-end px-3 bg-slate-100 aspect-[3/1] rounded-xl">
+          <div class="grid items-end px-3 bg-slate-100 aspect-3/1 rounded-xl">
             <span class="text-[360px]/[0.8] inline-block translate-y-8 font-black text-white">
               {{ chapterIndex }}
             </span>
           </div>
 
-          <h2 class="mt-4 font-bold text-3xl/snug text-balance">{{ chapter.data.title }}</h2>
+          <h2 class="mt-4 font-semibold text-fluid-32-36/snug text-balance">{{ chapter.data.title }}</h2>
 
           {# Chapter TOC #}
           {% if chapter.templateContent %}
@@ -111,7 +111,7 @@ permalink: 'produkt/pleiepenger/d/index.html'
 
     </div>
 
-    <div class="pt-2 mt-12 text-sm italic border-t border-slate-200 col-wide">{{ published | safe }}</div>
+    <div class="pt-2 mt-12 text-fluid-16-18 italic border-t border-slate-200 col-wide">{{ published | safe }}</div>
   </main>
 {%- endblock -%}
 
