--- a/_excluded/pleiepenger/pleiepenger.njk
+++ b/_excluded/pleiepenger/pleiepenger.njk
@@ -16,13 +16,13 @@ permalink: 'produkt/pleiepenger/index.html'
 
   <main class="grid py-16 grid-cols-left-1 lg:grid-cols-left-2">
     <div class="col-main lg:col-wide">
-      <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
-      <h1 class="mt-1 font-bold text-4xl/tight text-balance">{{ title | safe }}</h1>
-      <div class="mt-8 text-lg text-pretty max-w-prose">{{ ingress | markdown | safe }}</div>
+      <div class="text-fluid-16-18 tracking-widest uppercase">{{ type | safe }}</div>
+      <h1 class="mt-1 font-semibold text-fluid-36-48/tight text-balance">{{ title | safe }}</h1>
+      <div class="mt-8 text-fluid-20-22 text-pretty max-w-prose">{{ ingress | markdown | safe }}</div>
 
       {# Audience #}
       <div class="mt-6 -ml-1">
-        <span class="inline-block px-3 py-2 text-sm leading-none rounded-full bg-slate-200 ">
+        <span class="inline-block px-3 py-2 text-fluid-16-18 leading-none rounded-full bg-slate-200 ">
           {{ 'For ' if audience }}{{ audience | lower | safe }}
         </span>
       </div>
@@ -30,11 +30,11 @@ permalink: 'produkt/pleiepenger/index.html'
 
     {# Innholdsfortegnelse #}
     <div class="z-10 mt-12 isolate">
-      <h2 class="text-base font-semibold">Innhold på siden</h2>
+      <h2 class="text-fluid-18-20 font-semibold">Innhold på siden</h2>
       <ul class="grid gap-3 mt-2">
         {% for chapter in chapters.slice(0, -1) %}
         <li class="relative py-1">
-          <a class="flex items-end gap-2 p-1 -m-1 text-blue-500 group hover:text-blue-700 text-base/snug hover:underline" href="#{{ chapter.data.title | slugify }}">
+          <a class="flex items-end gap-2 p-1 -m-1 text-blue-500 group hover:text-blue-700 text-fluid-18-20/snug hover:underline" href="#{{ chapter.data.title | slugify }}">
             {{ chapter.data.title }}
             <span class="flex-1 h-px min-w-4 -translate-y-[0.25em] bg-dotted-x" aria-hidden="true"></span>
             {{ '/src/_includes/svg/icons/arrow-down.svg' | svgContents('w-8 h-8 bg-slate-100 p-1.5 rounded-full group-hover:bg-blue-500 group-hover:text-white') | safe }}
@@ -57,13 +57,13 @@ permalink: 'produkt/pleiepenger/index.html'
           x-intersect:enter.margin.-20%.0px.-60%.0px="showChapter{{ chapterIndex }} = true"
           x-intersect:leave.margin.-20%.0px.-60%.0px="showChapter{{ chapterIndex }} = false" 
         >
-          <div class="grid items-end px-3 bg-slate-100 aspect-[2/1] rounded-xl">
+          <div class="grid items-end px-3 bg-slate-100 aspect-2/1 rounded-xl">
             <span class="text-[360px]/[0.8] pointer-events-none inline-block translate-y-8 font-black text-white">
               {{ chapterIndex }}
             </span>
           </div>
 
-          <h2 class="mt-4 font-bold text-3xl/snug text-balance">{{ chapter.data.title }}</h2>
+          <h2 class="mt-4 font-semibold text-fluid-32-36/snug text-balance">{{ chapter.data.title }}</h2>
           <p>{{ chapter.data.ingress | safe }}</p>
 
 
@@ -74,7 +74,7 @@ permalink: 'produkt/pleiepenger/index.html'
             <ul class="grid gap-px py-1">
               {% for item in chapter.templateContent | tocData %}
               <li>
-                <a class="flex items-end gap-2 py-1 pl-4 text-blue-500 border-l-4 border-slate-200 hover:border-blue-500 group hover:text-blue-700 text-base/snug hover:underline" href="#{{ item.id }}">
+                <a class="flex items-end gap-2 py-1 pl-4 text-blue-500 border-l-4 border-slate-200 hover:border-blue-500 group hover:text-blue-700 text-fluid-18-20/snug hover:underline" href="#{{ item.id }}">
                   {{ item.text }}
                   <span class="flex-1 h-px min-w-4 -translate-y-[0.25em] bg-dotted-x" aria-hidden="true"></span>
                   {{ '/src/_includes/svg/icons/arrow-down.svg' | svgContents('w-7 h-7 p-1 bg-slate-100 group-hover:bg-white rounded-full shrink-0') | safe }}
@@ -109,7 +109,7 @@ permalink: 'produkt/pleiepenger/index.html'
               <ul class="grid gap-2 py-1 pl-3 mb-4 opacity-90" x-show="showChapter{{ loop.index }}">
                 {% for item in chapter.templateContent | tocData %}
                 <li>
-                  <a class="flex items-end gap-1 py-1 decoration-blue-500 group text-base/snug hover:underline toc-highlight-pill" href="#{{ item.id }}">
+                  <a class="flex items-end gap-1 py-1 decoration-blue-500 group text-fluid-18-20/snug hover:underline toc-highlight-pill" href="#{{ item.id }}">
                     <span class="w-max">{{ item.text }}</span>
                     {# <span class="flex-1 h-px min-w-4 -translate-y-[0.25em] bg-dotted-x" aria-hidden="true"></span>
                     {{ '/src/_includes/svg/icons/arrow-down.svg' | svgContents('w-7 h-7 p-1 rounded-full group-hover:bg-blue-500 group-hover:text-white') | safe }} #}
@@ -125,7 +125,7 @@ permalink: 'produkt/pleiepenger/index.html'
       </div>
     </div>
 
-    <div class="pt-2 mt-12 text-sm italic border-t border-slate-200 col-wide">{{ published | safe }}</div>
+    <div class="pt-2 mt-12 text-fluid-16-18 italic border-t border-slate-200 col-wide">{{ published | safe }}</div>
   </main>
 {%- endblock -%}
 
