--- a/_excluded/soknad/aap/aap-soknad.njk
+++ b/_excluded/soknad/aap/aap-soknad.njk
@@ -46,7 +46,7 @@
 
 {%- block content -%}
 
-  <main class="grid py-8 text-lg md:py-12 grid-cols-layout" x-data="{ stepperOpen: false }">
+  <main class="grid py-8 text-fluid-20-22 md:py-12 grid-cols-layout" x-data="{ stepperOpen: false }">
     <div class="relative mb-12 col-narrow md:mx-0">
 
       {# Pictogram #}
@@ -54,8 +54,8 @@
 
       {# Intro #}
       <div class="md:col-start-2 md:row-start-1">
-        <h1 class="text-3xl font-semibold leading-tight md:text-5xl md:leading-tight">{{ title | safe }}</h1>
-        <p class="mt-3 text-base tracking-wider uppercase opacity-80">
+        <h1 class="text-fluid-32-36 font-semibold leading-tight md:text-5xl md:leading-tight">{{ title | safe }}</h1>
+        <p class="mt-3 text-fluid-18-20 tracking-wider uppercase opacity-80">
           Søknad
         </p>
       </div>
@@ -70,7 +70,7 @@
             {# Stepper #}
             <div class="mb-10 md:col-start-1">
               <div class="relative py-2 rounded-sm pointer-fine:hover:bg-deepblue-50">
-                <h2 class="text-2xl font-semibold">{{ stepTitle | safe }}</h2>
+                <h2 class="text-fluid-24-28 font-semibold">{{ stepTitle | safe }}</h2>
                 <button class="absolute inset-0 flex items-start justify-end pr-0.5 pt-3.5 pointer-fine:hover:text-blue-800 rounded-sm pointer-fine:hover:ring-12 pointer-fine:hover:ring-deepblue-50" x-on:click="stepperOpen = !stepperOpen">
                   <span class="sr-only">Vis seksjoner</span>
                   <svg class="flex-none w-6 h-6 -translate-y-px pointer-events-none" x-bind:class="stepperOpen && 'rotate-180'" width="24" height="24" viewBox="0 0 24 24" fill="none" aria-hidden="true" focusable="false" >
@@ -82,7 +82,7 @@
                 <div class="mt-1.5 -mx-px mb-2 pointer-events-none -translate-y-px overflow-hidden rounded-full bg-deepblue-100">
                   <div class="h-3 bg-deepblue-500" style="width: calc(({{ pagination.pageNumber }} / {{ formSteps.length - 2 }}) * 100%)"></div>
                 </div>
-                <p class="text-base">Steg {{ pagination.pageNumber }} av {{ formSteps.length - 2 }}</p>
+                <p class="text-fluid-18-20">Steg {{ pagination.pageNumber }} av {{ formSteps.length - 2 }}</p>
               </div>
               <div class="px-3 py-4 mt-3" x-show="stepperOpen">
                 {{ stepperList(formSteps) }}
