--- a/_excluded/soknad/dagpenger/dagpenger-soknad.njk
+++ b/_excluded/soknad/dagpenger/dagpenger-soknad.njk
@@ -46,7 +46,7 @@
 
 {%- block content -%}
 
-  <main class="grid py-8 text-lg md:py-12 grid-cols-layout" x-data="{ stepperOpen: false }">
+  <main class="grid py-8 text-fluid-20-22 md:py-12 grid-cols-layout" x-data="{ stepperOpen: false }">
     <div class="relative col-wide max-w-prose md:max-w-none mx-auto md:mx-0 grid md:grid-cols-[6rem_auto] gap-x-8 items-start mb-12 w-full">
 
       {# Pictogram #}
@@ -54,8 +54,8 @@
 
       {# Intro #}
       <div class="pr-28 md:col-start-2 md:row-start-1 md:pr-0">
-        <h1 class="text-3xl font-semibold leading-tight md:text-5xl md:leading-tight">{{ title | safe }}</h1>
-        <p class="mt-2 text-base tracking-wider uppercase opacity-70">
+        <h1 class="text-fluid-32-36 font-semibold leading-tight md:text-5xl md:leading-tight">{{ title | safe }}</h1>
+        <p class="mt-2 text-fluid-18-20 tracking-wider uppercase opacity-70">
           Søknad
         </p>
       </div>
@@ -76,7 +76,7 @@
             {# Stepper (mobile) #}
             <div class="mb-10 rounded-lg max-w-prose md:col-start-1 md:hidden">
             <div class="relative px-3 py-2 rounded-md bg-deepblue-50">
-              <h2 class="text-2xl font-semibold">{{ stepTitle | safe }}</h2>
+              <h2 class="text-fluid-24-28 font-semibold">{{ stepTitle | safe }}</h2>
               <button class="absolute inset-0 flex items-start justify-end pl-3 pr-4 pt-3.5 text-blue-600 pointer-fine:hover:text-blue-800 rounded-md ring-2 ring-deepblue-50 pointer-fine:hover:ring-blue-500" x-on:click="stepperOpen = !stepperOpen">
                 <span class="sr-only">Vis seksjoner</span>
                 <svg class="flex-none w-6 h-6 -translate-y-px pointer-events-none" x-bind:class="stepperOpen && 'rotate-180'" width="24" height="24" viewBox="0 0 24 24" fill="none" aria-hidden="true" focusable="false" >
@@ -88,7 +88,7 @@
               <div class="mt-1.5 -mx-px mb-2 pointer-events-none -translate-y-px overflow-hidden rounded-full bg-deepblue-100">
                 <div class="h-3 bg-deepblue-500" style="width: calc(({{ pagination.pageNumber }} / {{ formSteps.length - 2 }}) * 100%)"></div>
               </div>
-              <p class="text-base">Steg {{ pagination.pageNumber }} av {{ formSteps.length - 2 }}</p>
+              <p class="text-fluid-18-20">Steg {{ pagination.pageNumber }} av {{ formSteps.length - 2 }}</p>
             </div>
             <div class="px-3 py-4" x-show="stepperOpen">
               {{ stepperList(formSteps) }}
@@ -101,13 +101,13 @@
             {% if (pagination.pageNumber > 0) and (pagination.pageNumber < (formSteps.length - 1)) %}
             {# Step Heading #}
             <div class="hidden mb-10 md:block">
-              <h2 class="text-2xl font-semibold">{{ stepTitle | safe }}</h2>
+              <h2 class="text-fluid-24-28 font-semibold">{{ stepTitle | safe }}</h2>
 
               {# Progressbar #}
               <div class="mt-1.5 mb-2  -translate-y-px overflow-hidden rounded-full bg-deepblue-100">
                 <div class="h-3 bg-deepblue-500" style="width: calc(({{ pagination.pageNumber }} / {{ formSteps.length - 2 }}) * 100%)"></div>
               </div>
-            <p class="text-base">Steg {{ pagination.pageNumber
+            <p class="text-fluid-18-20">Steg {{ pagination.pageNumber
                }} av {{ formSteps.length - 2 }}</p>
             </div>
             {% endif %}
