--- a/_excluded/tom/tom-side.njk
+++ b/_excluded/tom/tom-side.njk
@@ -8,6 +8,6 @@ permalink: false
 
 {%- block content -%}
   <main class="items-center py-12 grid grid-cols-layout min-h-[72vh]">
-    <div class="font-bold leading-none text-center uppercase col-narrow xl:col-wide text-squishy text-gray-700/5">Tom side</div>
+    <div class="font-semibold leading-none text-center uppercase col-narrow xl:col-wide text-squishy text-gray-700/5">Tom side</div>
   </main>
 {%- endblock -%}
