--- a/src/_includes/macros/formFields.njk
+++ b/src/_includes/macros/formFields.njk
@@ -6,7 +6,7 @@
     {{ args.label | safe }}
   </label>
   {%- if args.description -%}
-  <p class="max-w-lg col-start-2 mt-0.5 text-base">{{ args.description | safe }}</p>
+  <p class="max-w-lg col-start-2 mt-0.5 text-fluid-18-20">{{ args.description | safe }}</p>
   {%- endif -%}
 </div>
 {% endmacro %}
@@ -19,7 +19,7 @@
     {{ args.label }}
   </label>
   {%- if args.description -%}
-  <p class="col-start-2 text-base">{{ args.description }}</p>
+  <p class="col-start-2 text-fluid-18-20">{{ args.description }}</p>
   {%- endif -%}
 </div>
 {% endmacro %}
@@ -29,10 +29,10 @@
     <label for="{{ args.id }}" class="grid gap-0.5">
       <span class="font-semibold">{{ args.label }}</span>
       {%- if args.description -%}
-      <span class="text-base">{{ args.description }}</span>
+      <span class="text-fluid-18-20">{{ args.description }}</span>
       {%- endif -%}
     </label>
-    <input class="w-full px-2 py-2 mt-2.5 text-lg leading-snug border border-gray-300 rounded hover:border-gray-400" type="text" name="{{ args.name }}" id="{{ args.id }}">
+    <input class="w-full px-2 py-2 mt-2.5 text-fluid-20-22 leading-snug border border-gray-300 rounded hover:border-gray-400" type="text" name="{{ args.name }}" id="{{ args.id }}">
   </div>
 {% endmacro %}
 
@@ -41,9 +41,9 @@
     <label for="{{ args.id }}" class="grid gap-0.5">
       <span class="font-semibold">{{ args.label }}</span>
       {%- if args.description -%}
-      <span class="text-base">{{ args.description }}</span>
+      <span class="text-fluid-18-20">{{ args.description }}</span>
       {%- endif -%}
     </label>
-    <textarea class="w-full px-2 py-2 mt-2.5 text-lg leading-snug border border-gray-300 rounded hover:border-gray-400" rows="{{ args.rows or '3' }}" cols="{{ args.cols or '33' }}" name="{{ args.name }}" id="{{ args.id }}">
+    <textarea class="w-full px-2 py-2 mt-2.5 text-fluid-20-22 leading-snug border border-gray-300 rounded hover:border-gray-400" rows="{{ args.rows or '3' }}" cols="{{ args.cols or '33' }}" name="{{ args.name }}" id="{{ args.id }}">
   </div>
 {% endmacro %}
