--- a/src/_includes/macros/video.njk
+++ b/src/_includes/macros/video.njk
@@ -2,7 +2,7 @@
 <div class="relative flex flex-row-reverse items-center gap-3 group">
   <button class="grid flex-1 gap-1 leading-tight text-left after:absolute after:inset-0" type="button">
     <span class="font-semibold">Se video: {{ params.title }}</span>
-    <span class="text-sm">Varighet er {{ params.duration }}</span>
+    <span class="text-fluid-16-18">Varighet er {{ params.duration }}</span>
   </button>
   <div class="grid w-1/4 pointer-events-none min-w-24 place-items-center shrink-0">
     <img class="w-full h-auto col-start-1 col-end-2 row-start-1 row-end-1 rounded-sm" src="{{ params.image }}" alt="" width="1280" height="720">
