--- a/src/_includes/partials/navigation.njk
+++ b/src/_includes/partials/navigation.njk
@@ -1,5 +1,5 @@
 {# Navigation (Private) #}
-<div class="absolute z-40 w-full transition inset-x" x-bind:class="menuOpen ? 'opacity-0 animate-dropdown shadow-xl' : 'hidden'" x-bind:aria-hidden="!menuOpen" x-bind:hidden="!menuOpen" hidden>
+<div class="absolute z-40 w-full inset-x" x-bind:class="menuOpen ? 'opacity-0 animate-dropdown shadow-xl' : 'hidden'" x-bind:aria-hidden="!menuOpen" x-bind:hidden="!menuOpen" hidden>
 
   {# Rollebytte #}
   <div class="grid py-3 bg-white grid-cols-combi">
@@ -15,7 +15,7 @@
 
       {# Områder #}
       <div class="flex-1 row-start-1 lg:grid-flow-col-dense lg:pr-4 lg:col-span-2 lg:col-start-1 lg:row-span-2">
-        <h3 class="text-xs font-bold tracking-widest uppercase opacity-80">{{ menu.areas.title | safe }}</h3>
+        <h3 class="font-semibold tracking-widest uppercase text-fluid-14-16 opacity-80">{{ menu.areas.title | safe }}</h3>
         <ul class="grid gap-3 mt-3 sm:grid-cols-2 lg:grid-cols-1">
           {%- for link in menu.areas.linkList -%}
             <li class="">
@@ -35,10 +35,10 @@
 
       {# Søk #}
       <form class="w-full gap-2 lg:col-start-3 lg:max-w-2xl lg:col-span-4 lg:row-start-1 lg:pr-20">
-        <label class="block text-xs font-bold tracking-widest uppercase opacity-80" for="search">Søk</label>
+        <label class="block font-semibold tracking-widest uppercase text-fluid-14-16 opacity-80" for="search">Søk</label>
         <div class="flex mt-2">
           <input class="flex-1 p-2 border border-gray-300 rounded-l focus:outline-none focus:rounded focus:z-10 focus:ring focus:ring-blue-800" id="search" type="text">
-          <button class="flex items-center col-start-2 row-start-1 gap-2 px-6 py-2 text-xl text-white bg-blue-500 rounded-r pointer-fine:hover:bg-blue-600 focus:outline-none focus:rounded focus:z-10 focus:ring focus:ring-blue-800 focus:ring-offset-1 focus:ring-offset-white focus:bg-blue-600" type="submit">
+          <button class="flex items-center col-start-2 row-start-1 gap-2 px-6 py-2 text-white bg-blue-500 rounded-r text-fluid-22-24 pointer-fine:hover:bg-blue-600 focus:outline-none focus:rounded focus:z-10 focus:ring focus:ring-blue-800 focus:ring-offset-1 focus:ring-offset-white focus:bg-blue-600" type="submit">
             <svg class="w-5 h-5" viewBox="0 0 28 28" width="28" height="28" fill="currentColor"><path d="M3.5 12C3.5 8.41015 6.41015 5.5 10 5.5C13.5899 5.5 16.5 8.41015 16.5 12C16.5 15.5899 13.5899 18.5 10 18.5C6.41015 18.5 3.5 15.5899 3.5 12ZM10 2.5C4.75329 2.5 0.5 6.75329 0.5 12C0.5 17.2467 4.75329 21.5 10 21.5C12.6243 21.5 15.0001 20.4359 16.7195 18.7156L25.4966 26.6149L27.5034 24.3851L18.488 16.2712C19.1354 14.9871 19.5 13.5362 19.5 12C19.5 6.75329 15.2467 2.5 10 2.5Z" /></svg>
             <span class="sr-only">Søk</span>
           </button>
@@ -48,7 +48,7 @@
 
       {# Snarveier #}
       <div class="flex flex-col lg:row-start-2 lg:col-start-3 lg:col-span-3">
-        <h3 class="text-xs font-bold tracking-widest uppercase opacity-80">{{ menu.shortcuts.title | safe }}</h3>
+        <h3 class="font-semibold tracking-widest uppercase text-fluid-14-16 opacity-80">{{ menu.shortcuts.title | safe }}</h3>
         <ul class="mt-1 sm:columns-2">
           {%- for link in menu.shortcuts.linkList -%}
             <li class="py-0.5">
