--- a/src/index.njk
+++ b/src/index.njk
@@ -7,7 +7,7 @@ noJS: true
 
 {% macro link(item) %}
   <div class="relative grid place-content-start items-center gap-1 pt-5 pb-4 px-6 bg-slate-100 overflow-clip rounded-xl has-[a:hover]:bg-blue-500 has-[a:hover]:text-white">
-    <a class="font-semibold text-blue-600 text-lg/tight after:absolute hover:text-white after:z-10 after:inset-0" href="{{ item.url }}">
+    <a class="font-semibold text-blue-600 text-fluid-20-22/tight after:absolute hover:text-white after:z-10 after:inset-0" href="{{ item.url }}">
       {{ item.data.title }}
     </a>     
     {% if item.data.category %}     
