--- a/src/pages/forside/forside.njk
+++ b/src/pages/forside/forside.njk
@@ -13,8 +13,8 @@ alpine: true
   <main class="" x-bind:inert="menuOpen || myPageOpen">
     <div class="grid pt-8 pb-10 grid-cols-combi ">
       <div class="col-container">
-        <h2 class="text-2xl font-semibold">Hva kan vi hjelpe deg med?</h2>
-        <ul class="grid gap-2 mt-4 md:text-xl sm:grid-cols-2 xl:grid-cols-3 sm:gap-6">
+        <h2 class="font-semibold text-fluid-24-28">Hva kan vi hjelpe deg med?</h2>
+        <ul class="grid gap-2 mt-4 md:text-fluid-22-24 sm:grid-cols-2 xl:grid-cols-3 sm:gap-6">
           {%- for area in areaList -%}
             <li class="relative grid items-center overflow-clip break-inside-avoid pl-4 sm:pl-6 pr-28 sm:pr-36 py-3 rounded-lg min-h-20 md:min-h-32 transition text-blue-700 bg-deepblue-50 has-[a:hover]:bg-slate-100 has-[a:focus-visible]:ring has-[a:focus-visible]:ring-blue-600 has-[a:hover]:ring has-[a:hover]:ring-deepblue-100 c-area-card">
               <a class="leading-snug focus-visible:outline-none after:absolute after:inset-0 text-balance hover:decoration-2" href="{{ area.href or '#'}}">
@@ -35,8 +35,8 @@ alpine: true
 
     <div class="grid pt-8 pb-12 grid-cols-combi bg-red-50 ">
       <div class="col-container">
-        <h2 class="text-2xl font-semibold">Snarveier</h2>
-        <ul class="mt-3 md:text-lg sm:gap-x-6 sm:columns-2">
+        <h2 class="font-semibold text-fluid-24-28">Snarveier</h2>
+        <ul class="mt-3 md:text-fluid-20-22 sm:gap-x-6 sm:columns-2">
           {%- for shortcut in shortcutsList -%}
             <li class="-mt-px border-t border-b border-slate-300">
               <a class="relative flex items-center justify-start gap-2 px-2 py-3 text-blue-600 focus-visible:bg-white focus-visible:z-10 focus-visible:rounded focus-visible:outline-none hover:underline hover:decoration-2 focus-visible:ring-2 focus-visible:ring-blue-600 focus-visible:ring-offset-2 focus-visible:ring-offset-white" href="#">
@@ -52,14 +52,14 @@ alpine: true
 
     <div class="grid pt-8 pb-12 bg-white grid-cols-combi">
       <div class="col-container">
-        <h2 class="text-2xl font-semibold ">Aktuelt</h2>
+        <h2 class="font-semibold text-fluid-24-28 ">Aktuelt</h2>
         <div class="grid gap-2 mt-3 sm:grid-cols-2 sm:gap-6">
           {%- for news in newsList -%}
           <article class="relative grid pl-4 md:pl-6 pr-16 py-4 py-6 rounded-lg bg-slate-100 has-[a:focus-visible]:ring has-[a:focus-visible]:ring-blue-600 content-between has-[a:hover]:ring has-[a:hover]:ring-deepblue-300">
-            <h3 class="mb-auto text-lg leading-snug">
+            <h3 class="mb-auto leading-snug text-fluid-20-22">
               <a class="text-blue-600 after:z-10 after:absolute after:inset-0 focus-visible:outline-none" href="#">{{ news.title | safe }}</a>
             </h3>
-            <p class="text-lg leading-tight tracking-wide text-gray-800 small-caps">{{ news.date }}</p>
+            <p class="leading-tight tracking-wide text-gray-800 text-fluid-20-22 small-caps">{{ news.date }}</p>
             {{ '/src/_includes/svg/icons/arrow-right.svg' | svgContents('w-6 h-6 shrink-0 absolute my-auto inset-y-0 right-5 text-blue-600') | safe }}
           </article>
           {%- endfor -%}
@@ -75,10 +75,10 @@ alpine: true
 
     <div class="grid pt-10 pb-20 bg-slate-100 grid-cols-combi ">
       <div class="col-container">
-        <h2 class="text-2xl font-semibold ">Kontakt oss</h2>
+        <h2 class="font-semibold text-fluid-24-28 ">Kontakt oss</h2>
         <div class="grid gap-6 mt-4 sm:grid-cols-2">
           <div class="relative px-5 py-3.5 rounded-bl-none focus-within:rounded-bl-lg rounded-lg bg-white has-[a:focus-visible]:ring has-[a:focus-visible]:ring-blue-600 group has-[a:hover]:drop-shadow">
-            <h3 class="text-lg ">
+            <h3 class="text-fluid-20-22 ">
               <a class="text-blue-600 underline hover:decoration-2 after:inset-0 after:absolute after:z-10 focus-visible:outline-none" href="#">Du kan chatte med oss</a>
             </h3>
             <p class="mt-1 text-balance">Du møter først chatbot Frida. Du kan be Frida om å få chatte med en veileder (hverdager 09.00–15.00)</p>
@@ -87,7 +87,7 @@ alpine: true
             </svg>
           </div>
           <div class="relative px-5 py-4 rounded-lg has-[a:focus-visible]:ring has-[a:focus-visible]:ring-blue-600">
-            <h3 class="text-lg">
+            <h3 class="text-fluid-20-22">
               <a class="text-blue-600 underline hover:decoration-2 focus-visible:outline-none" href="/skriv-til-oss/">Du kan også ringe eller skrive til oss</a>
             </h3>
             <p class="mt-1 leading-snug text-balance">Se hvordan du kan kontakte oss på ulike måter.</p>
