--- a/src/pages/skriv-til-oss/skriv-til-oss.njk
+++ b/src/pages/skriv-til-oss/skriv-til-oss.njk
@@ -18,13 +18,13 @@ alpine: true
           {{ '/src/_includes/svg/piktogrammer/kontakt.svg' | svgContents('text-brand-purple-deep w-16 h-16 sm:w-24 sm:h-24') | safe  }}
         </div>
 
-        <div class="text-base font-medium tracking-wider text-gray-700 small-caps">
+        <div class="text-fluid-18-20 font-medium tracking-wider text-gray-700 small-caps">
           {{ category | safe }}
         </div>
-        <h1 class="mt-2 mb-3 font-extrabold tracking-tight text-4xl/tight text-pretty text-brand-purple-deep">
+        <h1 class="mt-2 mb-3 font-extrabold tracking-tight text-fluid-36-48/tight text-pretty text-brand-purple-deep">
           {{ title | safe }}
         </h1>
-        <p class="col-span-2 col-start-1 text-lg text-pretty xs:col-start-1 xs:col-span-1">{{ ingress }}</p>
+        <p class="col-span-2 col-start-1 text-fluid-20-22 text-pretty xs:col-start-1 xs:col-span-1">{{ ingress }}</p>
       </div>
       <div class="prose">
         <p>For å skrive til oss, må du logge inn. Bare skriv spørsmål eller opplysninger som gjelder deg selv. Du kan ikke skrive for andre. Hvis du vil kontakte oss på vegne av andre, må du ringe oss og ha muntlig eller skriftlig fullmakt.</p>
@@ -34,7 +34,7 @@ alpine: true
         </p>
 
         <div class="p-8 prose bg-brand-beige rounded-xs">
-          <h2 class="text-xl">Økonomisk sosialhjelp og andre sosiale tjenester</h2>
+          <h2 class="text-fluid-22-24">Økonomisk sosialhjelp og andre sosiale tjenester</h2>
           <p>Kontakt oss på chat eller telefon 55 55 33 33 (tastevalg 1) hvis du har spørsmål om</p>
           <ul>
             <li>økonomisk sosialhjelp</li>
@@ -45,7 +45,7 @@ alpine: true
         </div>
 
         {# <div class="p-8 prose bg-brand-beige rounded-xs">
-          <h2 class="text-xl">Økonomisk sosialhjelp og andre sosiale tjenester</h2>
+          <h2 class="text-fluid-22-24">Økonomisk sosialhjelp og andre sosiale tjenester</h2>
           <p>Kontakt oss på chat eller telefon 55 55 33 33 (tastevalg 1) hvis du har spørsmål om økonomisk sosialhjelp, midlertidig botilbud, kvalifiseringsprogrammet, økonomisk rådgivning, opplysning, råd og veiledning</p>
         </div> #}
       </div>
@@ -53,26 +53,26 @@ alpine: true
       <div class="py-16">
         <div class="mb-8">
           <div class="w-10 h-[0.675ch] bg-[#E6C7D8] mb-5 mt-5"></div>
-          <h2 class="font-bold text-brand-purple-deep text-3xl/tight text-balance">
+          <h2 class="font-semibold text-brand-purple-deep text-fluid-32-36/tight text-balance">
             <a href="#velg-tema">Andre tema</a>
           </h2>
         </div>
 
         {% for item in messageList %}
           {# {% if (item.links.length > 1) or (item.links === undefined) %}
-            <h3 class="mt-6 {{ '!mt-0' if loop.first }} text-xl/tight font-bold">
+            <h3 class="mt-6 {{ 'mt-0!' if loop.first }} text-fluid-22-24/tight font-semibold">
               {{ item.title }}
             </h3>         
           {% endif %} #}
           {# {% if item.description %}
-            <p class="mt-2 text-sm">{{ item.description }}</p>
+            <p class="mt-2 text-fluid-16-18">{{ item.description }}</p>
           {% endif %} #}
           {% if item.links %}
           <ul class="grid gap-3 mt-3">
             {% for link in item.links %}
               <li class="grid px-5 py-4 relative bg-white has-[a:focus-visible]:ring has-[a:focus-visible]:ring-blue-600 has-[a:hover]:bg-blue-50 border rounded-lg gap-x-12 border-slate-300">
                 <a class="font-semibold leading-normal text-blue-600 after:absolute after:inset-0 after:z-10 hover:underline hover:decoration-2 focus-visible:outline-none" href="#">{{ link.title }}</a>
-                <p class="col-start-1 mt-0.5 text-sm text-pretty">{{ link.description if link.description }}</p>
+                <p class="col-start-1 mt-0.5 text-fluid-16-18 text-pretty">{{ link.description if link.description }}</p>
                 <span class="col-start-2 row-span-2 row-start-1 my-auto ml-auto text-blue-600">
                 {{ '/src/_includes/svg/icons/enter.svg' | svgContents('w-6 h-6 opacity-80') | safe }}
                 </span>
